replace meta-nav styles with something a bit more robust

--- a/app/assets/stylesheets/admin/_admin-header.sass
+++ b/app/assets/stylesheets/admin/_admin-header.sass
@@ -14,9 +14,8 @@
     display: block
     flex: 0
     padding: 0.5rem 1rem
-    border-bottom: 1px solid var(--black)
     width: 10rem
     font-size: var(--b4)
     &:hover
-      background-color: var(--black)
+      background-color: var(--blue)
       color: var(--default)
