--- a/app/assets/stylesheets/shared/_block.sass
+++ b/app/assets/stylesheets/shared/_block.sass
@@ -225,6 +225,9 @@
   &.-br
     border-right: 1px solid var(--black)
 
+  &.-hr
+    border-bottom: calc(0.75rem/2) solid var(--black)
+
   &.-b-highlight
     border-radius: 1.25px
     border: 3px solid var(--blue)
