--- a/app/views/layouts/_primary-flag.html.haml
+++ b/app/views/layouts/_primary-flag.html.haml
@@ -28,5 +28,5 @@
             .action
               %input{type: 'submit', value: 'Subscribe', class: 'text-button'}
 
-.block.-bb
+.block.-hr
   = render partial: 'layouts/content-nav'
