--- a/app/views/comments/_comments.html.haml
+++ b/app/views/comments/_comments.html.haml
@@ -1,6 +1,6 @@
-%header.-section
-  %h3.heading
-    %a.anchor{title: 'comments', id: 'comments'} Reader responses
+%header.block.-bt.-pt1.-my2
+  %h3{title: 'comments', id: 'comments'}
+    Reader responses
 
 .box.-tight
   %header.-box
