--- a/app/views/layouts/_primary-flag.html.haml
+++ b/app/views/layouts/_primary-flag.html.haml
@@ -4,12 +4,13 @@
   .frame{role: 'layout'}
     .flag-ears
       .ear
-        .text.-tiny.-centered
-          %h5 Follow us on
-          %ul.list.-nav
-            %li= link_to "Twitter", "https://www.twitter.com/dublininquirer"
-            %li= link_to "Facebook", "https://www.facebook.com/dublininquirer"
-            %li= link_to "Instagram", "https://www.instagram.com/dublininquirer"
+        .block.-b1.-py1
+          .text.-tiny.-centered
+            %h5 Follow us on
+            %ul.list.-nav
+              %li= link_to "Twitter", "https://www.twitter.com/dublininquirer"
+              %li= link_to "Facebook", "https://www.facebook.com/dublininquirer"
+              %li= link_to "Instagram", "https://www.instagram.com/dublininquirer"
       .flag
         = link_to root_path do
           .logotype.-large
@@ -20,13 +21,14 @@
           %span Different
 
       .ear
-        .text.-tiny.-centered
-          %h5 Get our weekly newsletter
-          %form.tiny-form{action: "https://tinyletter.com/DublinInquirer", method: "post", onsubmit: "window.open('https://tinyletter.com/DublinInquirer', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true", target: "popupwindow"}
-            .field
-              %input{name: 'email', type: 'email', placeholder: 'Enter your email'}
-            .action
-              %input{type: 'submit', value: 'Subscribe', class: 'text-button'}
+        .block.-b1.-py1
+          .text.-tiny.-centered
+            %h5 Get our weekly newsletter
+            %form.tiny-form{action: "https://tinyletter.com/DublinInquirer", method: "post", onsubmit: "window.open('https://tinyletter.com/DublinInquirer', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true", target: "popupwindow"}
+              .field
+                %input{name: 'email', type: 'email', placeholder: 'Enter your email'}
+              .action
+                %input{type: 'submit', value: 'Subscribe', class: 'text-button'}
 
 .block.-hr
   = render partial: 'layouts/content-nav'
