--- a/app/assets/stylesheets/shared/_text.sass
+++ b/app/assets/stylesheets/shared/_text.sass
@@ -105,7 +105,7 @@
   font-weight: 300
   margin-bottom: var(--baseline)
 .h.-h3
-  font-size: var(--h3)
+  font-size: var(--b1)
   line-height: 1.3
   font-weight: 800
   margin-bottom: var(--baseline)
