fewer horizontal lines to encourage scrolling

--- a/app/assets/stylesheets/shared/_block.sass
+++ b/app/assets/stylesheets/shared/_block.sass
@@ -210,6 +210,8 @@
   &.-gb
     margin-bottom: calc(var(--gutter) * 2)
 
+  &.-b
+    border: 1px solid var(--black)
   &.-by
     border-top: 1px solid var(--black)
     border-bottom: 1px solid var(--black)
