--- a/app/views/layouts/snippets/_stripe.html.erb
+++ b/app/views/layouts/snippets/_stripe.html.erb
@@ -1,4 +1,4 @@
 <script src="https://js.stripe.com/v3/"></script>
 <script type="text/javascript">
-  var stripe = Stripe('#{ Rails.application.config.stripe[:publishable_key] }');
+  var stripe = Stripe('<%= Rails.application.config.stripe[:publishable_key] -%>');
 </script>
