rm some lines and clean up stockists

--- a/app/views/articles/search.html.haml
+++ b/app/views/articles/search.html.haml
@@ -5,7 +5,7 @@
     Search results for
     %code.-quote #{ params[:q] }
 
-.block.-p2.-pb4
+.block.-pt2.-pb4
   - if @articles.any?
     .wrapper.-contained{role: 'layout'}
       = render partial: 'articles/index', locals: {page: @page, articles: @articles, query_params: {q: @query}}
