--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -4,6 +4,6 @@
 %header.page-header
   %h1.heading= display_category(@category)
 
-.block.-p2.-pb4
+.block.-pt2.-pb4
   .wrapper.-contained{role: 'layout'}
     = render partial: 'articles/index', locals: {page: @page, articles: @articles, query_params: {}}
