--- a/app/views/issues/index.html.haml
+++ b/app/views/issues/index.html.haml
@@ -3,7 +3,7 @@
 %header.page-header
   %h1.heading Past issues
 
-.block.-p2.-pb4
+.block.-pt2.-pb4
   .wrapper.-contained{role: 'layout'}
     - @issues.each do |issue|
       - cache([issue, 'partial']) do
