--- a/app/views/layouts/_primary-footer.html.haml
+++ b/app/views/layouts/_primary-footer.html.haml
@@ -1,5 +1,5 @@
-%footer.primary-footer
-  .block.-p2.-py4
+%footer.primary-footer.block.-pb4
+  .block.-py4
     .wrapper.-contained{role: 'layout'}
       .row
         .col-xs-12.col-md-3
