--- a/app/views/products/_enticement.html.haml
+++ b/app/views/products/_enticement.html.haml
@@ -1,4 +1,4 @@
-.block.-px2.-pb2.-bt
+.block.-pb2.-bt
   .wrapper.-contained{role: 'layout'}
     .block.-mt2.-bg-black
       - if logged_in? and current_user.subscriber? and current_user.patron?
