--- a/app/views/tags/show.html.haml
+++ b/app/views/tags/show.html.haml
@@ -6,6 +6,6 @@
     Articles related to
     %code.-quote #{ @tag.name }
 
-.block.-p2.-pb4
+.block.-pt2.-pb4
   .wrapper.-contained{role: 'layout'}
     = render partial: 'articles/index', locals: {page: @page, articles: @articles, query_params: {q: @query}}
