--- a/app/assets/stylesheets/components/_content-nav.sass
+++ b/app/assets/stylesheets/components/_content-nav.sass
@@ -2,7 +2,7 @@
   display: none
   flex-direction: row
   justify-content: space-between
-  padding: 0.5rem 2rem
+  padding: 0.5rem 0
 
   & > div
     flex-grow: 1
