--- a/app/assets/stylesheets/components/_page-header.sass
+++ b/app/assets/stylesheets/components/_page-header.sass
@@ -1,6 +1,6 @@
 .page-header
   border-bottom: 1px solid var(--black)
-  padding: 2.25rem 2rem 1.75rem
+  padding: 2.25rem 0 1.75rem
   position: relative
 
   .heading
