--- a/app/assets/stylesheets/components/_primary-flag.sass
+++ b/app/assets/stylesheets/components/_primary-flag.sass
@@ -3,7 +3,7 @@
   flex-direction: row
   justify-content: center
   align-items: center
-  padding: 2rem 1rem
+  padding: 2rem
 
   .ear
     display: none
@@ -37,7 +37,7 @@
   @media screen and (min-width: $medium)
   @media screen and (min-width: $large)
     justify-content: space-between
-    padding: 0 2rem
+    padding: 0
 
     .ear
       display: block
