--- a/app/assets/stylesheets/layouts/_wrapper.sass
+++ b/app/assets/stylesheets/layouts/_wrapper.sass
@@ -1,4 +1,7 @@
 .wrapper[role=layout]
+  &.-container
+    margin-left: 2vw
+    margin-right: 2vw
 
   @media screen and (min-width: $medium)
     &.-medium
