--- a/app/views/issues/show.html.haml
+++ b/app/views/issues/show.html.haml
@@ -4,11 +4,10 @@
 %header.page-header
   %h1.heading From the #{ @issue.issue_date.strftime('%-d %B %Y') } issue
 
-.block.-p2.-pb4
-  .wrapper.-contained{role: 'layout'}
-    - @articles.in_groups_of(4, false).each do |group|
-      .row
-        - group.each do |article|
-          .col-xs-12.col-lg-3
-            = render partial: 'articles/excerpts/result', locals: { article: article }
-            %hr.-stroke.-not-lg
+.block.-pt2.-pb4
+  - @articles.in_groups_of(4, false).each do |group|
+    .row
+      - group.each do |article|
+        .col-xs-12.col-lg-3
+          = render partial: 'articles/excerpts/result', locals: { article: article }
+          %hr.-stroke.-not-lg
