fix expansive nav

--- a/app/assets/stylesheets/shared/_block.sass
+++ b/app/assets/stylesheets/shared/_block.sass
@@ -239,6 +239,7 @@
 
 .flex
   display: flex
+  flex: 1
   @media screen and (min-width: $small)
   @media screen and (min-width: $medium)
     &.-cy
