--- a/app/views/layouts/_expansive-nav.html.haml
+++ b/app/views/layouts/_expansive-nav.html.haml
@@ -11,8 +11,8 @@
                   <rect transform="translate(121.208153, 121.208153) rotate(45.000000) translate(-121.208153, -121.208153) " x="-38.7918472" y="111.208153" width="320" height="20"></rect>
                   <rect transform="translate(121.000000, 121.000000) rotate(-45.000000) translate(-121.000000, -121.000000) " x="-39" y="111" width="320" height="20"></rect>
 
-  %main.sub-omnipresent
-    .flex.-cy
+  %main.sub-omnipresent.content
+    .block.flex.-cy
       .wrapper.-container{role: 'layout'}
         .block.-p2
           .wrapper.-contained{role: 'layout'}
