rm vertical strokes for a bit anyway

--- a/app/assets/stylesheets/components/_meta-nav.sass
+++ b/app/assets/stylesheets/components/_meta-nav.sass
@@ -15,10 +15,14 @@
     flex-direction: column
     align-items: center
     justify-content: center
-    padding: 0.625rem 0.75rem
+    padding: 0.625rem 1rem
     border-width: 0
     border-style: solid
     border-color: var(--black)
+
+    .icon
+      margin-left: -0.25rem
+      margin-right: -0.25rem
 
     &.-subscribe
       background-color: var(--yellow)
