--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -55,7 +55,7 @@
 
       .row
         - @article.from_the_same_issue.by_position.first(4).each do |article|
-          .col-xs-12.col-md-3.col.flex
+          .col-xs-12.col-md-3
             = render partial: 'articles/excerpts/tiny', locals: { article: article }
 
 - if permission_for_cookie? and @article.paywalled? # yes cookie, and yes paywalled
