--- a/app/assets/stylesheets/components/_meta-nav.sass
+++ b/app/assets/stylesheets/components/_meta-nav.sass
@@ -28,6 +28,7 @@
       background-color: var(--yellow)
       border-left-width: 1px
       color: var(--black)
+      font-weight: 600
       &:hover
         background-color: var(--yellow)
         color: var(--red)
